<resources>
    <string name="app_name">乐享生活</string>
    <string name="activity_login">登录</string>
    <string name="activity_wechat">微信</string>
    <string name="activity_king_glory">王者荣耀</string>
    <string name="activity_layout">布局展示</string>
    <string name="activity_function">多彩功能</string>
    <string name="activity_draw_line">绘制</string>
    <string name="activity_voice_record">语音</string>
    <string name="activity_journal_analysis">博能日志解析</string>
    <string name="activity_fill_blank">填空题</string>
    <string name="activity_currency">通用</string>
    <string name="activity_custom">自定义布局</string>
    <string name="activity_location">原生定位</string>
    <string name="activity_video_play">视频播放</string>

    <!-- 登录 -->
    <string name="prompt_account">账户</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in_short">登录</string>


    <string name="action_settings">设置</string>
    <string name="action_search">搜索</string>
    <string name="action_add">添加</string>
    <string name="action_add_friend">添加朋友</string>
    <string name="action_qrcode">扫一扫</string>
    <string name="action_camera">拍照</string>
    <string name="action_collect">收藏</string>
    <string name="action_card">添加银行卡</string>
    <string name="action_feed">意见反馈</string>
    <!-- 王者荣耀 -->
    <string name="action_list">列表</string>
    <string name="action_grid">网格</string>
    <string name="action_falls">瀑布</string>


    <string name="navigation_drawer_open">打开</string>
    <string name="navigation_drawer_close">关闭</string>
    <string name="nav_menu1">王者荣耀</string>
    <string name="nav_menu2">多彩功能</string>
    <string name="nav_menu3">其它功能</string>
    <string name="nav_menu4">浮动布局</string>
    <string name="about_us">关于我们</string>
    <string name="nav_feedback">意见反馈</string>
    <string name="nav_share">分享</string>
    <string name="nav_setting">设置</string>

    <!-- 默认取值 -->
    <string name="default_image">图片</string>
    <string name="default_load">内容加载失败</string>

    <string name="title_notification_bar">当前步数:%1$s</string>
    <string name="title_dialog">提示</string>

    <!-- 权限管理 -->
    <string name="permission_calendar">日历</string>
    <string name="permission_successfully">授权成功</string>
    <string name="permission_failure">授权失败</string>
    <string name="permission_calendar_storage">麦克风，存储卡</string>
    <string name="permission_phone">手机状态，定位</string>
    <string name="permission_sensors">传感器</string>
    <string name="permission_camera_check">检查相机权限</string>

    <!-- 图片选择 -->
    <string name="image_all">所有图片</string>
    <string name="preview">预览</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>
    <string name="image">图片</string>
    <string name="msg_no_camera">无法启用系统相机</string>
    <string name="done_with_count">完成(%1$d/%2$d)</string>
    <string name="done">完成</string>
    <string name="delete">删除</string>
    <string name="image_index">%1$d/%2$d</string>
    <string name="deleted_a_photo">删除了一张图片</string>
    <string name="confirm_to_delete">确认删除？</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="undo">撤消</string>

    <!-- 自定义绘制 -->
    <string name="title_draw_color">背景色</string>
    <string name="title_draw_circle">圆</string>
    <string name="title_draw_rect">矩形</string>
    <string name="title_draw_point">点</string>
    <string name="title_draw_oval">椭圆()</string>
    <string name="title_draw_line">线条</string>
    <string name="title_draw_round_rect">圆角矩形</string>
    <string name="title_draw_arc">扇形</string>
    <string name="title_draw_path">爱心</string>
    <string name="title_draw_histogram">直方图</string>
    <string name="title_draw_pie_chart">饼图</string>

    <string name="title_linear_gradient">线性渐变</string>
    <string name="title_radial_gradient">辐射渐变</string>
    <string name="title_sweep_gradient">扫描渐变</string>
    <string name="title_bitmap_shader">Bitmap着色</string>
    <string name="title_compose_shader">混合着色</string>
    <string name="title_lighting_color_filter">颜色过滤</string>
    <string name="title_color_matrix_color_filter">去饱和度</string>
    <string name="title_xfermode">混合计算</string>
    <string name="title_stroke_cap">线头</string>
    <string name="title_stroke_join">拐角</string>
    <string name="title_stroke_miter">拐角补偿</string>
    <string name="title_path_effect">圆拐角</string>
    <string name="title_shader_layer">加阴影</string>
    <string name="title_mask_filter">模糊效果</string>
    <string name="title_fill_path">实际路径</string>
    <string name="title_text_path">文字路径</string>

    <string name="title_draw_text">文本绘制</string>
    <string name="title_get_font_spacing">文字间距</string>

    <string name="title_clip_rect">裁剪</string>
    <string name="title_clip_path">路径裁剪</string>
    <string name="title_translate">画布移动</string>
    <string name="title_scale">画布缩放</string>
    <string name="title_rotate">画布旋转</string>
    <string name="title_skew">错切</string>
    <string name="title_matrix_translate">矩阵变换</string>
    <string name="title_camera_rotate">三维旋转</string>
    <string name="title_camera_rotate_fixed">修正版</string>
    <string name="title_camera_rotate_hitting_face">糊脸修正</string>
    <string name="title_flipboard">翻页效果</string>

    <string name="title_after_on_draw">后插</string>
    <string name="title_before_on_draw">前插</string>
    <string name="title_on_draw_layout">布局后插</string>
    <string name="title_after_on_draw_foreground">onDrawForeground()-后插</string>
    <string name="title_before_draw">draw()前插</string>
    <string name="hello">Hello HenCoder</string>
    <string name="about_hencoder">HenCoder 是\n针对高级 Android 工程师\n的进阶手册\n旨在突破高手们最基础的技能瓶颈\n结束止步不前的状态，继续快速提升\n内容难度上也许对新手不够友好\n只能说句得罪了\n我个人水平有限\n照顾不到所有人</string>
    <string name="image_size">尺寸：%1$d x %2$d</string>
    <string name="princess_girl">魔法公主</string>

    <string name="title_translation">平移动画</string>
    <string name="title_rotation">旋转动画</string>
    <string name="title_animal_scale">伸缩动画</string>
    <string name="title_alpha">渐变动画</string>
    <string name="title_multi_properties">多属性</string>
    <string name="title_duration">动画时长</string>
    <string name="title_interpolator">setInterpolator()</string>
    <string name="title_object_animator">ObjectAnimator</string>
    <string name="batman">Batman</string>
    <string name="duration">Duration</string>
    <string name="ms_with_value">%dms</string>
    <string name="interpolator">Interpolator</string>
    <string name="animate">animate</string>
    <string name="title_object_animator_multi_float">ObjectAnimator.ofMultiFloat()</string>
    <string name="api_lower_than_21">API 21 及更高版本才支持这个，换个高版本的设备再试吧</string>
    <string-array name="interpolators">
        <item>AccelerateDecelerateInterpolator</item>
        <item>LinearInterpolator</item>
        <item>AccelerateInterpolator</item>
        <item>DecelerateInterpolator</item>
        <item>AnticipateInterpolator</item>
        <item>OvershootInterpolator</item>
        <item>AnticipateOvershootInterpolator</item>
        <item>BounceInterpolator</item>
        <item>CycleInterpolator</item>
        <item>PathInterpolator</item>
        <item>FastOutLinearInInterpolator</item>
        <item>FastOutSlowInInterpolator</item>
        <item>LinearOutSlowInInterpolator</item>
    </string-array>

    <string name="title_argb_evaluator">ArgbEvaluator</string>
    <string name="title_hsv_evaluator">HsvEvaluator</string>
    <string name="title_of_object">ofObject()</string>
    <string name="title_property_values_holder">PropertyValuesHolder</string>
    <string name="title_animator_set">AnimatorSet</string>
    <string name="title_keyframe">PropertyValuesHolder.ofKeyframe()</string>

    <!-- 自定义布局 -->
    <string name="title_square_image_view">方形图片</string>
    <string name="width">宽度</string>
    <string name="height">高度</string>
    <string name="adjust_frame">外框调节</string>
</resources>
