<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu1"
            android:icon="@mipmap/ic_menu_1"
            android:title="@string/nav_menu1" />
        <item
            android:id="@+id/nav_menu2"
            android:icon="@mipmap/ic_menu_2"
            android:title="@string/nav_menu2" />
        <item
            android:id="@+id/nav_menu3"
            android:icon="@mipmap/ic_menu_3"
            android:title="@string/nav_menu3" />
        <item
            android:id="@+id/nav_menu4"
            android:icon="@mipmap/ic_menu_4"
            android:title="@string/activity_layout" />
    </group>

    <item android:title="@string/about_us">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@mipmap/ic_menu_5"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@mipmap/ic_menu_6"
                android:title="@string/nav_feedback" />

            <item
                android:id="@+id/nav_setting"
                android:icon="@mipmap/ic_menu_6"
                android:title="@string/nav_setting" />
        </menu>
    </item>

</menu>
