<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cxl.life.app.wechat.WeChatActivity">

    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@mipmap/wechat_search_icon"
        android:title="@string/action_search"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_plus"
        android:actionProviderClass="com.cxl.life.app.wechat.PlusActionProvider"
        android:icon="@mipmap/wechat_add_icon"
        android:title="@string/action_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_album"
        android:icon="@mipmap/wechat_camera_icon"
        android:title="@string/action_camera" />

    <item
        android:id="@+id/action_collection"
        android:icon="@mipmap/wechat_collect_icon"
        android:title="@string/action_collect" />
    <item
        android:id="@+id/action_card"
        android:icon="@mipmap/wechat_card_icon"
        android:title="@string/action_card" />
    <item
        android:id="@+id/action_settings"
        android:icon="@mipmap/wechat_setting_icon"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_feed"
        android:icon="@mipmap/wechat_feedback_icon"
        android:title="@string/action_feed" />
</menu>
